# cloud-native-agents

./: README.md  pyproject.toml
UI/: entrypoint.sh  index.html
agent_discovery/mcp_registry/: .env.example  .gitignore  MCP_Registry_Demo.ipynb  README.md  server.example.json
agent_discovery/nanda/adapter/: .env.examples  .gitignore  README.md  requirements.txt
agent_discovery/nanda/adapter/examples/: langchain_pirate_agent.py  mcp_agent.py  mcp_server.py  rephrase_agent.py
agent_discovery/nanda/adapter/nanda_utils/: facts_provider.py
backend/: Containerfile
backend/api/: main.py
demos/mcp_auth/: README.md  pyproject.toml  server.py
kafka/: Containerfile  README.md  agents.py  commenter_agent.py  issue_reader_agent.py  kafka_producer.py  launch_kafka_system.py  monitor_consumer.py  pyproject.toml  reasoner_agent.py  requirements.txt  researcher_agent.py  streamlit_kafka_ui.py  ui_consumer.py
kafka/openshift/: deployment.yaml
review_agent/: review_agent.py
